@@ -46,6 +46,8 @@ cupt (2.9.0~) UNRELEASED; urgency=medium
   * doc:
     - cmakelists:
       - Added rules building man pages from PODs.
+  * cmakelists:
+    - Added '-pthread' to compiling and linking flags. (Closes: #760489)
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 21:26:32 +0300
 
